# tgbf2

./: .gitignore  README.md  config.py  constants.py  emoji.py  main.py  plugin.py  pm2.config.json  pyproject.toml  run.py  utils.py  web.py
cfg/: global.cfg
plg/: README.md
plg/about/: about.py
plg/about/cfg/: about.cfg
plg/about/res/: create_test.sql
plg/active/: active.py
plg/active/cfg/: active.cfg
plg/active/res/: create_active.sql  delete_active.sql  insert_active.sql  select_active.sql
plg/admin/: admin.py
plg/admin/cfg/: admin.cfg
plg/admin/res/: admin.txt
plg/backup/: backup.py
plg/backup/cfg/: backup.cfg
plg/backup/res/: backup.txt
plg/database/: database.py
plg/database/cfg/: database.cfg
plg/database/res/: database.txt  insert_test.sql  select_test.sql
plg/debug/: debug.py
plg/debug/cfg/: debug.cfg
plg/error/: error.py
plg/feedback/: feedback.py
plg/feedback/cfg/: feedback.cfg
plg/feedback/res/: feedback.txt
plg/help/: help.py
plg/help/cfg/: help.cfg
plg/logfile/: logfile.py
plg/logfile/cfg/: logfile.cfg
plg/restart/: restart.py
plg/restart/cfg/: restart.cfg
plg/shutdown/: shutdown.py
plg/shutdown/cfg/: shutdown.cfg
plg/start/: start.py
plg/start/cfg/: start.cfg
plg/start/res/: start.txt
plg/update/: update.py
res/: 404.html
