[tool.poetry]
name = "tgbf2"
version = "0.1.0"
description = "Telegram Bot Framework 2"
authors = ["endogen <081081@gmx.net>"]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.2"
python-dotenv = "^1.0.0"
nest-asyncio = "^1.5.6"
loguru = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
