[tool.poetry]
name = "TGBF2"
version = "1.0.0"
description = "Telegram Bot Framework 2"
authors = ["endogen <endogen@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = {extras = ["job-queue"], version = "^20.3"}
python-dotenv = "^1.0.0"
nest-asyncio = "^1.5.6"
loguru = "^0.7.0"
psutil = "^5.9.5"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
